--- a/yaml-deploy/deployment.yaml
+++ b/yaml-deploy/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: hello-deployment
   labels:
-    app: nginx
+    app: hello
 spec:
   replicas: 3
   strategy: 
@@ -12,14 +12,14 @@ spec:
       maxUnavailable: 1
   selector:
     matchLabels:
-      app: nginx
+      app: hello-app
   template:
     metadata:
       labels:
-        app: nginx
+        app: hello-app
     spec:
       containers:
-      - name: hello
+      - name: hello-pod
         image: jbclementdocker/aks-coding-dojo:hello
         ports:
         - containerPort: 80
