--- a/yaml-deploy/ingress.yaml
+++ b/yaml-deploy/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: test-ingress
+  name: hello-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -13,16 +13,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: hello-front
+                name: hello-service
                 port:
-                  number: 80
-    - http:
-        paths:
-          - path: /toto
-            pathType: Prefix
-            backend:
-              service:
-                name: hello-front
-                port:
-                  number: 80
-            
+                  number: 80            
